k8s/sql.yaml
#Basic yaml file for deploying a MySQL database to our cluster.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.6
        ports:
        - containerPort: 3306
        # Ignore this for now. It will be explained in the next article
---
kind: Service
apiVersion: v1
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
  #ClusterIP means the service is only exposed within the cluster, not to external internet.
  type: ClusterIP
